# Sudoku

./: CMakeLists.txt  gamesave.cpp  gamesave.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  help.cpp  help.ui  levels.cpp  levels.h  levels.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourses.qrc  settings.ui  sudokugenerator.cpp  sudokugenerator.h  testgamewindow.cpp
